--- a/Aytpical_Matplot.ipynb
+++ b/Aytpical_Matplot.ipynb
@@ -63,7 +63,7 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "plt.figure(1)                # the first figure\n",
-        "plt.subplot(211)             # the first subplot in the first figure\n",
+        "plt.subplot(211)             # first subplot in the first figure\n",
         "plt.plot([1, 2, 3])\n",
         "plt.subplot(212)             # the second subplot in the first figure\n",
         "plt.plot([4, 5, 6])\n",
